# Impetus-LLM-Server

./: """Run this model in Python.py  .env  .env.example  .gitignore  .nochroma  =2.7.0  ACTUAL_SYSTEM_STATUS.md  APPLE_SILICON_REAL_VS_MOCK_AUDIT.md  CHANGELOG.md  CLAUDE.md  CRITICAL_DATA_REALITY_AUDIT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE.md  DEVELOPMENT_AUDIT.md  Dockerfile  ENHANCEMENT_SUMMARY.md  GERDSENAI.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  Impetus-LLM-Server.code-workspace  Impetus.spec  Info.plist  LICENSE  MANIFEST.in  MCP_COMPREHENSIVE_SETUP_COMPLETE.md  MCP_IMPETUS_INTEGRATION_COMPLETE.md  MCP_SETUP_COMPLETE_FINAL.md  MCP_SETUP_SUMMARY.md  MOCK_DATA_REMOVAL_ROADMAP.md  MODEL_MANAGEMENT_UI_STATUS.md  MODEL_SYSTEM_INTEGRITY_AUDIT.md  MVP_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REAL_INFERENCE_BREAKTHROUGH.md  RELEASE_NOTES.md  SECURITY_FIXES.md  SECURITY_FIXES_COMPLETE.md  SELF_CONTAINED_APP_COMPLETE.md  (+51 more)
.azure/: API_Key_Config_Summary.md  Impetus_LLM_Server_API_Config.json  Impetus_LLM_Server_Setup.md
.clinerules/: CLAUDE.md  agent_session_init.md  commit_checklist.md  development_rules.md  mcp_configuration.md  mcp_development_workflow.md  mcp_summary_for_gemini.md  mcp_usage_guide.md  memory.md
.github/: labeler.yml
.github/workflows/: build-app.yml  ci.yml  deploy.yml  manual-release.yml  performance.yml  pr-checks.yml  release.yml
assets/: icon.icns
backups/impetus-electron-backup/: INSTALLATION.md  install-impetus.sh
config/models/: dummy-coreml.json  dummy-mlx.json
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  ENHANCEMENT_SUMMARY.md  INSTALLATION.md  KUBERNETES_PROBES.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SERVER.md  enhanced_architecture_design.md  frontend_development_guidelines.md  lightweight_service_setup.md  vscode_integration.md
docs/research/: COMPUTE_ARCHITECTURE_DATA_TABLES.md  Impetus-LLM-Server-Architecture-Blueprint.md  QUICK_REFERENCE_CARD.md  RAG_QUICK_REFERENCE.md  RESEARCH_COMPLETION_REPORT.txt  RESEARCH_DELIVERY_SUMMARY.txt  RESEARCH_INDEX_COMPUTE_ARCHITECTURE.md  RESEARCH_SUMMARY_COMPUTE_ARCHITECTURE.md  VECTOR_DB_RAG_RESEARCH.md  community-health-viability-research.md  frontend_modernization_research.md  research_findings_npu_gpu_cpu_compute_architecture.md  research_framework_ecosystem.md
examples/: model_loader_factory_usage.py  onnx_loader_example.py
gerdsen-ai-frontend/: index.html  package.json
gerdsen-ai-frontend/src/: App.jsx
gerdsen_ai_server/: .env.example  gunicorn_config.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_production.txt  start_production.sh  wsgi.py
gerdsen_ai_server/scripts/: perf_baseline.py
gerdsen_ai_server/src/: __init__.py  apple_frameworks_integration.py  bundled_import_helper.py  cli.py  dummy_model_loader.py  enhanced_apple_frameworks_integration.py  enhanced_apple_silicon_detector.py  integrated_mlx_manager.py  integrated_mlx_manager_bundled.py  lightweight_frontend_server.py  main.py  production_gerdsen_ai.py  production_main.py  production_main_bundled.py  production_main_enhanced.py  production_main_simple.py  production_main_ssl.py
gerdsen_ai_server/tests/: conftest.py  perf_baselines.json  test_api_models.py  test_compute_dispatcher.py  test_coreml_loader.py  test_document_chunker.py  test_documents_api.py  test_download_manager.py  test_embedding_bridge.py  test_embeddings_api.py  test_error_recovery.py  test_error_responses.py  test_hardware_api.py  test_hardware_detector.py  test_health_api.py  test_integration.py  test_kv_cache.py  test_mlx_embedding_loader.py  test_mlx_kv_generation.py  test_mlx_loader.py  test_model_discovery.py  test_model_warmup.py  test_openai_chat.py  test_performance.py  test_rag_pipeline.py  test_settings.py  test_validation.py  test_vector_store.py  test_websocket.py
impetus-dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
impetus-dashboard/e2e/: chat-interface.spec.ts  dashboard.spec.ts  documents.spec.ts  model-management.spec.ts
impetus-dashboard/src/: App.css  App.tsx  index.css
impetus-electron/: BUNDLING.md  CODE_SIGNING_GUIDE.md  README.md  build-app.sh  install-impetus.sh  package.json  setup.sh  sign-app-local.sh
impetus-electron/scripts/: bundle-python.js  postinstall.js  test-bundle.js
impetus-electron/src/: main.js  preload.js
installer/: drag_drop_installer.py
installers/: README.md  create_dmg.sh  create_dmg_background.py  create_icon.py  create_simple_dmg.sh  docker_installer.sh  install_menubar.sh  macos_app_builder.sh  macos_gui_installer.sh  macos_simple_app.sh  macos_standalone_app.sh  production_installer.sh  service_installer.sh  uninstaller.sh  updater.sh
installers/assets/: AppIcon.icns  Info.plist
installers/scripts/: first_run.py  launcher.sh
nginx/: nginx.conf
nginx/conf.d/: impetus.conf
releases/v1.0.0/: INSTALL.txt  README.md
scripts/: build_macos.sh  build_with_pyinstaller.sh  cleanup_unneeded_files.sh  download_example_model.py  generate_ssl_certs.sh  install.sh  setup_user_models.py  start_production.sh
service/: com.gerdsenai.impetus.plist  impetus.plist  impetus.service  install-service.sh
src/: integrated_mlx_manager.py  macos_service_integration.py  main.py  tray_app.py
src/models/: multi_model_manager.py
tests/: COMPREHENSIVE_TEST_RESULTS.md  README.md  conftest.py  test_full_functionality.py  test_model_loader_factory.py  test_production_functionality.py
tests/api/: test_api_smoke.py  test_health_metrics.py
tests/e2e/: conftest.py  generate_test_summary.py  run_full_e2e_tests.py  test_01_server_lifecycle.py  test_02_model_management.py  test_03_inference.py  test_04_embeddings.py  test_05_rag_pipeline.py  test_06_hardware_monitoring.py  test_07_error_handling.py  test_model_inference.py  test_visual_components.py  test_web_ui.js
tests/gui/: menubar_automation.applescript  test_menubar_gui.py  test_performance_modes.py
ui/: enhanced_styles.css  script.js
(+156 files in other folders)
