[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impetus-llm-server"
version = "0.1.0"
description = "Lightning-fast local LLM server optimized for Apple Silicon with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GerdsenAI", email = "dev@gerdsenai.com"},
]
keywords = ["llm", "mlx", "apple-silicon", "ml", "ai", "inference", "server", "openai-compatible"]
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "flask-socketio>=5.3.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "mlx>=0.28.0,<1.0.0",
    "mlx-lm>=0.26.0,<1.0.0",
    "mlx-metal>=0.28.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
    "rumps>=0.4.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-socketio>=5.11.0,<6.0.0",
    "loguru>=0.7.0,<1.0.0",
    "gunicorn>=21.0.0,<22.0.0",
    "eventlet>=0.40.0,<1.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "transformers>=4.52.1,<5.0.0",
    "huggingface-hub>=0.34.0,<1.0.0",
    "pyobjc-core>=11.1,<12.0",
    "pyobjc-framework-Cocoa>=11.1,<12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU",
]

[project.urls]
Homepage = "https://github.com/GerdsenAI/Impetus-LLM-Server"
Documentation = "https://github.com/GerdsenAI/Impetus-LLM-Server#readme"
Repository = "https://github.com/GerdsenAI/Impetus-LLM-Server"
Issues = "https://github.com/GerdsenAI/Impetus-LLM-Server/issues"

[project.scripts]
impetus = "src.main:main"
impetus-server = "src.main:main"

[tool.setuptools]
package-dir = {"" = "gerdsen_ai_server"}
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'